--- a/TA_CTIS_TAXII/globalConfig.json
+++ b/TA_CTIS_TAXII/globalConfig.json
@@ -18,8 +18,8 @@
                                 "field": "name"
                             },
                             {
-                                "label": "Server Base URL",
-                                "field": "server_base_url"
+                                "label": "API Root URL",
+                                "field": "api_root_url"
                             }
                         ]
                     },
@@ -30,25 +30,25 @@
                             "validators": [
                                 {
                                     "type": "regex",
-                                    "errorMsg": "Account Name must begin with a letter and consist exclusively of alphanumeric characters and underscores.",
+                                    "errorMsg": "Config Name must begin with a letter and consist exclusively of alphanumeric characters and underscores.",
                                     "pattern": "^[a-zA-Z]\\w*$"
                                 },
                                 {
                                     "type": "string",
-                                    "errorMsg": "Length of input name should be between 1 and 100",
+                                    "errorMsg": "Length of name should be between 1 and 100",
                                     "minLength": 1,
                                     "maxLength": 100
                                 }
                             ],
                             "field": "name",
-                            "help": "A unique name for the account.",
+                            "help": "A unique name for the config.",
                             "required": true
                         },
                         {
                             "type": "text",
-                            "label": "TAXII Server Discovery URL",
-                            "field": "server_base_url",
-                            "help": "Example: https://example.com/taxii2/",
+                            "label": "TAXII API Root URL",
+                            "field": "api_root_url",
+                            "help": "Example: https://taxii2.example.org/trustgroup1/",
                             "required": true
                         },
                         {
@@ -140,7 +140,7 @@
     "meta": {
         "name": "TA_CTIS_TAXII",
         "restRoot": "TA_CTIS_TAXII",
-        "version": "0.0.0R5188ba6",
+        "version": "0.0.0R3c415f2",
         "displayName": "CTIS TAXII ES Add-on",
         "schemaVersion": "0.0.7",
         "_uccVersion": "5.49.0",
