--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@splunk/moment": "^0.7.0",
     "@splunk/react-toast-notifications": "^0.11.3",
+    "@splunk/search-job": "^3.1.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react-hook-form": "^7.53.0",
