--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "shelljs": "^0.8.5",
