--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -14,12 +14,14 @@
     "stylelint": "stylelint \"src/**/*.{js,jsx}\" --config stylelint.config.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.8",
     "@splunk/moment": "^0.7.0",
     "@splunk/react-toast-notifications": "^0.11.3",
     "@splunk/search-job": "^3.1.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react-hook-form": "^7.53.0",
+    "react-redux": "^8.1.3",
     "react-responsive": "^10.0.0",
     "uuid": "^10.0.0"
   },
