--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -17,10 +17,10 @@ jobs:
     - name: List
       run: pwd && ls -l
     - name: Install pytest
-      run: pip install pytest
+      run: pip install pytest pytest-cov
     - name: Install requirements
       run: pip install -r TA_CTIS_TAXII/package/lib/requirements.txt
     - name: Run unit tests
-      run: python -m pytest TA_CTIS_TAXII/test/
+      run: python -m pytest TA_CTIS_TAXII/test/ --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
       
