--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -27,7 +27,12 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         path: integration_test/ctis.tar.gz
-        name: ctis.${{ github.sha }}.tar.gz
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      with:
+        body: Release ${{github.sha}}
+        files: integration_test/ctis.tar.gz
+        
     #- name: Spin up Splunk docker
      # run: cd integration_test && ./spin-up-docker-splunk.sh
       
