--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Release
 on:
   push:
-    branches:
-      - master # or main
+    branches: ['main']
 
 permissions:
   contents: read # for checkout
