--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: "lts/*"
     - name: List
       run: pwd && ls -l
     - name: Install UCC
