--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,3 +55,22 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             run: npx semantic-release
 
+  integration-test:
+      runs-on: ubuntu-latest
+      needs: [package]
+      steps:
+          - uses: actions/checkout@v4
+          - name: Setup Node.js
+            uses: actions/setup-node@v3
+            with:
+                node-version: "lts/*"
+          - name: Download app artifact
+            uses: actions/download-artifact@v4
+            with:
+                name: app
+          - name: list
+            run: pwd && ls -l
+          - name: Setup upterm session
+            uses: lhotari/action-upterm@v1
+            with:
+                limit-access-to-actor: true
